Library load/unload

--- a/src/com/cburch/LogisimFX/resources/localization/log_pt.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/log_pt.properties
@@ -1,7 +1,7 @@
 #
 # OptionsFrame.java
 #
-logFrameTitle= Logisim: Registro %s de %s
+logFrameTitle= LogisimFX: Registro %s de %s
 logFrameMenuItem= %s: Registro
 closeButton= Fechar janela
 #
