--- a/src/com/cburch/LogisimFX/resources/localization/menu.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/menu.properties
@@ -36,7 +36,7 @@ projectMenu = Project
 projectAddCircuitItem = Add Circuit...
 projectLoadLibraryItem = Load Library
 projectLoadBuiltinItem = Built-in Library...
-projectLoadLogisimItem = Logisim Library...
+projectLoadLogisimItem = LogisimFX Library...
 projectLoadJarItem = JAR Library...
 projectUnloadLibraryItem = Unload Library
 projectUnloadLibrariesItem = Unload Libraries...
@@ -119,7 +119,7 @@ analyzeNoExpressionTitle = Expression Not Determined
 loadBuiltinErrorTitle = Cannot Load Built-In Library
 loadBuiltinNoneError = All built-in libraries are already loaded.
 loadBuiltinDialogTitle = Load Built-in Library
-loadLogisimDialogTitle = Load Logisim File
+loadLogisimDialogTitle = Load LogisimFX File
 loadJarDialogTitle = Load JAR File
 jarClassNamePrompt = Class Name:
 jarClassNameTitle = Enter JAR Class
