--- a/src/com/cburch/LogisimFX/resources/localization/menu_de.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/menu_de.properties
@@ -34,7 +34,7 @@ projectMenu= Projekt
 projectAddCircuitItem= Schaltung hinzuf\u00fcgen...
 projectLoadLibraryItem= Bibliothek laden
 projectLoadBuiltinItem= Eingebaute Bibliothek...
-projectLoadLogisimItem= Logisim Bibliothek...
+projectLoadLogisimItem= LogisimFX Bibliothek...
 projectLoadJarItem= JAR-Bibliothek...
 projectUnloadLibraryItem= Bibliothek entfernen
 projectUnloadLibrariesItem= Bibliotheken entfernen...
@@ -87,7 +87,7 @@ helpAboutItem= \u00dcber...
 helpNotFoundError= Hilfedaten nicht gefunden.
 helpUnavailableError= Konnte die Hilfedaten nicht laden.
 helpDisplayError= Konnte die Hilfedaten nicht anzeigen.
-helpWindowTitle= Dokumentation von Logisim
+helpWindowTitle= Dokumentation von LogisimFX
 helpsetUrl= LogisimFX/resources/doc/doc_de.hs
 
 # Popups.java
@@ -115,7 +115,7 @@ analyzeNoExpressionTitle= Ausdruck wurde nicht ermittelt
 loadBuiltinErrorTitle= Kann eingebaute Bibliothek nicht laden
 loadBuiltinNoneError= Alle eingebauten Bibliotheken sind schon geladen.
 loadBuiltinDialogTitle= Eingebaute Bibliothek laden
-loadLogisimDialogTitle= Logisim-Datei laden
+loadLogisimDialogTitle= LogisimFX-Datei laden
 loadJarDialogTitle= JAR-Datei laden
 jarClassNamePrompt= Klassenname:
 jarClassNameTitle= JAR-Klasse eingeben
