--- a/src/com/cburch/LogisimFX/resources/localization/menu_es.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/menu_es.properties
@@ -29,7 +29,7 @@ projectMenu = Proyecto
 projectAddCircuitItem = Añadir Circuito...
 projectLoadLibraryItem = Cargar Librería
 projectLoadBuiltinItem = Librería Incorporada...
-projectLoadLogisimItem = Librería Logisim...
+projectLoadLogisimItem = Librería LogisimFX...
 projectLoadJarItem = Librería JAR...
 projectUnloadLibraryItem = Descargar  Librería
 projectUnloadLibrariesItem = Descargar Librerías...
@@ -108,7 +108,7 @@ analyzeNoExpressionTitle = Expresión No Definida
 loadBuiltinErrorTitle = No Se Puede Cargar La Librería Incorporada
 loadBuiltinNoneError = Todas las librerías incorporadas ya estan cargadas.
 loadBuiltinDialogTitle = Cargar Una Librería Incorporada
-loadLogisimDialogTitle = Cargar Un Archivo Logisim
+loadLogisimDialogTitle = Cargar Un Archivo LogisimFX
 loadJarDialogTitle = Cargar Un Archivo JAR
 jarClassNamePrompt = Nombre De La Clase:
 jarClassNameTitle = Introducir Una Clase JAR
