--- a/src/com/cburch/LogisimFX/resources/localization/menu_pt.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/menu_pt.properties
@@ -34,7 +34,7 @@ projectMenu= Projeto
 projectAddCircuitItem= Acrescentar circuito...
 projectLoadLibraryItem= Carregar biblioteca
 projectLoadBuiltinItem= Biblioteca predefinida...
-projectLoadLogisimItem= Biblioteca do Logisim...
+projectLoadLogisimItem= Biblioteca do LogisimFX...
 projectLoadJarItem= Biblioteca JAR...
 projectUnloadLibraryItem= Carregar biblioteca
 projectUnloadLibrariesItem= Descarregar bibliotecas...
@@ -89,7 +89,7 @@ helpAboutItem= Sobre...
 helpNotFoundError= Ajuda indisponível.
 helpUnavailableError= Impossível obter ajuda.
 helpDisplayError= Impossível exibir ajuda.
-helpWindowTitle= Documentação do Logisim
+helpWindowTitle= Documentação do LogisimFX
 helpsetUrl= LogisimFX/resources/doc/doc_pt.hs
 
 # Popups.java
@@ -117,7 +117,7 @@ analyzeNoExpressionTitle= Expressão indeterminada
 loadBuiltinErrorTitle= Impossível carregar biblioteca predefinida
 loadBuiltinNoneError= Todas as bibliotecas predefinidas já estão carregadas.
 loadBuiltinDialogTitle= Carregar biblioteca predefinida
-loadLogisimDialogTitle= Carregar arquivo Logisim
+loadLogisimDialogTitle= Carregar arquivo LogisimFX
 loadJarDialogTitle= Carregar arquivo JAR
 jarClassNamePrompt= Nome da classe:
 jarClassNameTitle= Entrar com a classe JAR
