--- a/src/com/cburch/LogisimFX/resources/localization/prefs_de.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/prefs_de.properties
@@ -1,7 +1,7 @@
 #
 # PreferencesFrame.java
 #
-preferencesFrameTitle= Logisim: Voreinstellungen
+preferencesFrameTitle= LogisimFX: Voreinstellungen
 preferencesFrameMenuItem= Voreinstellungen
 closeButton= Fenster schlie\u00dfen
 
