--- a/src/com/cburch/LogisimFX/resources/localization/proj.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/proj.properties
@@ -13,7 +13,7 @@ fileOpenError = Could not open file: %s
 fileOpenErrorTitle = Error During Open
 templateOpenError = Could not open template: %s
 templateOpenErrorTitle = Error Loading Template
-replaceExtensionMessage = Would you like to replace "%s" with Logisim's preferred ".circ" extension?
+replaceExtensionMessage = Would you like to replace "%s" with LogisimFX's preferred ".circ" extension?
 replaceExtensionTitle = Replace Extension
 confirmQuitTitle = Confirm Quit
 replaceExtensionReplaceOpt = Replace "%s"
