--- a/src/com/cburch/LogisimFX/resources/localization/proj_de.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/proj_de.properties
@@ -13,7 +13,7 @@ fileOpenError= Konnte Datei %s nicht \u00f6ffnen
 fileOpenErrorTitle= Fehler beim \u00d6ffnen
 templateOpenError= Konnte Vorlage %s nicht \u00f6ffnen
 templateOpenErrorTitle= Fehler beim Laden der Vorlage
-replaceExtensionMessage= Soll "%s" durch die Endung ".circ" von Logisim ersetzt werden?
+replaceExtensionMessage= Soll "%s" durch die Endung ".circ" von LogisimFX ersetzt werden?
 replaceExtensionTitle= Dateiendung ersetzen
 confirmQuitTitle= Beenden best\u00e4tigen
 replaceExtensionReplaceOpt= "%s" ersetzen
