--- a/src/com/cburch/LogisimFX/resources/localization/proj_es.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/proj_es.properties
@@ -11,6 +11,6 @@ confirmOverwriteMessage = El archivo ya existe ¿Quieres sobreescribirlo?
 confirmOverwriteTitle = Confirmar Sobreescribir
 fileOpenError = No se pudo abrir el archivo: %s
 fileOpenErrorTitle = Error Al Abrir
-replaceExtensionMessage = ¿Quieres sustituir "%s" con la extesión preferida de Logisim ".circ"?
+replaceExtensionMessage = ¿Quieres sustituir "%s" con la extesión preferida de LogisimFX ".circ"?
 replaceExtensionTitle = Sustituir extensión
 confirmQuitTitle = Confirmar Salir
