--- a/src/com/cburch/LogisimFX/resources/localization/proj_pt.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/proj_pt.properties
@@ -13,7 +13,7 @@ fileOpenError= Impossível abrir arquivo: %s
 fileOpenErrorTitle= Erro durante abertura
 templateOpenError= Impossível abrir gabarito: %s
 templateOpenErrorTitle= Erro ao carregar gabarito
-replaceExtensionMessage= Gostaria de trocar a extensão "%s" pela extensão preferencial ".circ" do Logisim?
+replaceExtensionMessage= Gostaria de trocar a extensão "%s" pela extensão preferencial ".circ" do LogisimFX?
 replaceExtensionTitle= Substituir extensão
 confirmQuitTitle= Confirmar encerramento
 replaceExtensionReplaceOpt= Substituir "%s"
