--- a/src/com/cburch/LogisimFX/resources/localization/start.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/start.properties
@@ -16,7 +16,7 @@ argOneTemplateError = Only one template allowed.
 argUsage = usage: java %s [options] [filenames]
 argOptionHeader = options:
 argEmptyOption    = -empty            use empty template
-argPlainOption    = -plain            use standard Logisim template
+argPlainOption    = -plain            use standard LogisimFX template
 argTemplateOption = -template file    use file as template
 argGatesOption    = -gates shaped|rectangular   use specified gate style
 argLocaleOption   = -locale str       use locale given in str
