--- a/src/com/cburch/LogisimFX/resources/localization/start_de.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/start_de.properties
@@ -16,7 +16,7 @@ argOneTemplateError= Nur eine Vorlage ist erlaubt.
 argUsage= Anwendung: java %s [Optionen] [Dateinamen]
 argOptionHeader= Optionen:
 argEmptyOption= -empty            benutze eine leere Vorlage
-argPlainOption= -plain            benutze die Standardvorlage von Logisim
+argPlainOption= -plain            benutze die Standardvorlage von LogisimFX
 argTemplateOption= -template Datei    benutze Datei als Vorlage
 argGatesOption= -gates shaped|rectangular   benutze den angegebenen Stil f\u00fcr die Gatter
 argLocaleOption= -locale str       benutze das in str angegebene Gebietsschema
