--- a/src/com/cburch/LogisimFX/resources/localization/start_es.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/start_es.properties
@@ -5,7 +5,7 @@ argOneTemplateError = Sólo se permite una plantilla.
 argUsage = uso: java %s [opciones] [nombre de archivos]
 argOptionHeader = opciones:
 argEmptyOption    = -empty            utilizar plantilla vacía
-argPlainOption    = -plain            utilizar plantilla estándar de Logisim
+argPlainOption    = -plain            utilizar plantilla estándar de LogisimFX
 argTemplateOption = -template file    utilizar archivo como plantilla
 argGatesOption    = -gates shaped|rectangular   utilizar estilo de puerta determinado
 argLocaleOption   = -locale idm       utilizar idioma dado por idm
