--- a/src/com/cburch/LogisimFX/resources/localization/start_pt.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/start_pt.properties
@@ -16,7 +16,7 @@ argOneTemplateError= Somente permitido um gabarito.
 argUsage= uso: java %s [options] [filenames]
 argOptionHeader= opções:
 argEmptyOption= -empty            usar gabarito vazio
-argPlainOption= -plain            usar gabarito padrão do Logisim
+argPlainOption= -plain            usar gabarito padrão do LogisimFX
 argTemplateOption= -template arquivo    usar arquivo com gabarito
 argGatesOption= -gates shaped|rectangular   usar estilo de porta especificado
 argLocaleOption= -locale str       usar definição regional dada por str
