--- a/src/com/cburch/LogisimFX/resources/localization/gui.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/gui.properties
@@ -16,8 +16,8 @@ canvasExceptionError = Simulation halted by internal error
 #
 # gui/Frame.java
 #
-titleCircFileKnown = Logisim: %s of %s
-titleFileKnown = Logisim: %s
+titleCircFileKnown = LogisimFX: %s of %s
+titleFileKnown = LogisimFX: %s
 confirmDiscardMessage = What should happen to your unsaved changes to %s?
 confirmCloseTitle = Confirm Close
 saveOption = Save
@@ -85,7 +85,7 @@ changeToolAttrAction = Change Tool Attribute
 #
 # gui/main/StatisticsDialog.java
 #
-statsDialogTitle = Logisim: %s Statistics
+statsDialogTitle = LogisimFX: %s Statistics
 statsCloseButton = Close
 statsSimpleCountColumn = Simple
 statsUniqueCountColumn = Unique
