--- a/src/com/cburch/LogisimFX/resources/localization/gui_es.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/gui_es.properties
@@ -14,8 +14,8 @@ canvasOscillationError = Osciación evidente
 #
 # gui/Frame.java
 #
-titleCircFileKnown = Logisim: %s de %s
-titleFileKnown = Logisim: %s
+titleCircFileKnown = LogisimFX: %s de %s
+titleFileKnown = LogisimFX: %s
 confirmDiscardMessage = ¿Qué quieres hacer con los cambios sin salvar en %s?
 confirmCloseTitle = Confirmar Cerrar
 saveOption = Salvar
