--- a/src/com/cburch/LogisimFX/resources/localization/hex.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/hex.properties
@@ -1,7 +1,7 @@
 #
 # HexFrame.java
 #
-hexFrameTitle = Logisim: Hex Editor
+hexFrameTitle = LogisimFX: Hex Editor
 hexFrameMenuItem = Hex Editor
 hexPasteErrorTitle = Paste Error
 hexPasteSupportedError = The clipboard contents cannot be pasted into the editor.
