--- a/src/com/cburch/LogisimFX/resources/localization/hex_de.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/hex_de.properties
@@ -1,7 +1,7 @@
 #
 # HexFrame.java
 #
-hexFrameTitle= Logisim: Hex-Editor
+hexFrameTitle= LogisimFX: Hex-Editor
 hexFrameMenuItem= Hex-Editor
 hexPasteErrorTitle= Fehler beim Einf\u00fcgen
 hexPasteSupportedError= Der Inhalt der Zwischenablage konnte nicht eingef\u00fcgt werden.
