--- a/src/com/cburch/LogisimFX/resources/localization/hex_es.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/hex_es.properties
@@ -1,7 +1,7 @@
 #
 # HexFrame.java
 #
-hexFrameTitle = Logisim: Editor Hex
+hexFrameTitle = LogisimFX: Editor Hex
 hexFrameMenuItem = Editor Hex
 hexPasteErrorTitle = Error Al Pegar
 hexPasteSizeError = La región para pegar debe ser del mismo tamaño que el sujetapapeles.
