--- a/src/com/cburch/LogisimFX/resources/localization/log.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/log.properties
@@ -1,7 +1,7 @@
 #
 # OptionsFrame.java
 #
-logFrameTitle = Logisim: Log %s of %s
+logFrameTitle = LogisimFX: Log %s of %s
 logFrameMenuItem = %s: Log
 closeButton = Close Window
 #
