--- a/src/com/cburch/LogisimFX/resources/localization/log_de.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/log_de.properties
@@ -1,7 +1,7 @@
 #
 # OptionsFrame.java
 #
-logFrameTitle= Logisim: Log %s von %s
+logFrameTitle= LogisimFX: Log %s von %s
 logFrameMenuItem= %s: Log
 closeButton= Fenster schlie\u00dfen
 #
