--- a/src/com/cburch/LogisimFX/resources/localization/opts.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/opts.properties
@@ -1,7 +1,7 @@
 #
 # OptionsFrame.java
 #
-optionsFrameTitle = Logisim: %s Options
+optionsFrameTitle = LogisimFX: %s Options
 optionsFrameMenuItem = %s: Options
 revertButton = Revert All To Template
 closeButton = Close Window
