--- a/src/com/cburch/LogisimFX/resources/localization/opts_de.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/opts_de.properties
@@ -1,7 +1,7 @@
 #
 # OptionsFrame.java
 #
-optionsFrameTitle= Logisim: %s Optionen
+optionsFrameTitle= LogisimFX: %s Optionen
 optionsFrameMenuItem= %s: Optionen
 revertButton= Vorlage wiederherstellen
 closeButton= Fenster schlie\u00dfen
