--- a/src/com/cburch/LogisimFX/resources/localization/opts_pt.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/opts_pt.properties
@@ -1,7 +1,7 @@
 #
 # OptionsFrame.java
 #
-optionsFrameTitle= Logisim: opções %s
+optionsFrameTitle= LogisimFX: opções %s
 optionsFrameMenuItem= %s: Opções
 revertButton= Restaurar aos padrões
 closeButton= Fechar janela
