--- a/src/com/cburch/LogisimFX/resources/localization/prefs.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/prefs.properties
@@ -1,7 +1,7 @@
 #
 # PreferencesFrame.java
 #
-preferencesFrameTitle = Logisim: Preferences
+preferencesFrameTitle = LogisimFX: Preferences
 preferencesFrameMenuItem = Preferences
 closeButton = Close Window
 
