--- a/src/com/cburch/LogisimFX/resources/localization/prefs_es.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/prefs_es.properties
@@ -1,7 +1,7 @@
 #
 # PreferencesFrame.java
 #
-preferencesFrameTitle = Logisim: Preferencias
+preferencesFrameTitle = LogisimFX: Preferencias
 preferencesFrameMenuItem = Preferencias
 closeButton = Cerrar Ventana
 #
