--- a/src/com/cburch/LogisimFX/resources/localization/prefs_pt.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/prefs_pt.properties
@@ -1,7 +1,7 @@
 #
 # PreferencesFrame.java
 #
-preferencesFrameTitle= Logisim: Preferências
+preferencesFrameTitle= LogisimFX: Preferências
 preferencesFrameMenuItem= Preferências
 closeButton= Fechar janela
 
