Library title bind

--- a/src/com/cburch/LogisimFX/resources/localization/tools.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/tools.properties
@@ -1,7 +1,7 @@
 #
 # tools/AddTool.java
 #
-addToolText = Add %s
+addToolText = Add 
 negativeCoordError = Component cannot have negative coordinates.
 cannotModifyError = Cannot modify circuit.
 circularError = Cannot create circular reference.
