--- a/src/com/cburch/LogisimFX/resources/localization/tools_de.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/tools_de.properties
@@ -1,7 +1,7 @@
 #
 # tools/AddTool.java
 #
-addToolText= %s hinzuf\u00fcgen
+addToolText= inzuf\u00fcgen 
 negativeCoordError= Bauteil darf keine negativen Koordinaten haben.
 cannotModifyError= Schaltung kann nicht ver\u00e4ndert werden.
 circularError= Zirkelbezug kann nicht hergestellt werden.
