--- a/src/com/cburch/LogisimFX/resources/localization/tools_es.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/tools_es.properties
@@ -1,7 +1,7 @@
 #
 # tools/AddTool.java
 #
-addToolText = Añadir %s
+addToolText = Añadir 
 negativeCoordError = El componente no puede tener coordenadas negativas.
 cannotModifyError = No se puede modificar el circuito.
 circularError = No se puede crear referencia circuito.
