--- a/src/com/cburch/LogisimFX/resources/localization/tools_pt.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/tools_pt.properties
@@ -1,7 +1,7 @@
 #
 # tools/AddTool.java
 #
-addToolText= Acrescentar %s
+addToolText= Acrescentar 
 negativeCoordError= Componente não pode ter coordenadas negativas.
 cannotModifyError= Impossível modificar circuito.
 circularError= Impossível criar referência circular.
