--- a/src/com/cburch/LogisimFX/resources/localization/gui.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/gui.properties
@@ -7,6 +7,8 @@ changeCircuitAttrAction = Change Circuit
 attributeChangeInvalidError = Attribute unchanged because request is invalid
 attributeChangeInvalidTitle = Value Invalid
 cannotModifyCircuitError = This circuit cannot be modified.
+attributeNameTitle = Attribute
+attributeValueTitle = Value
 #
 # gui/Canvas.java
 #
