--- a/src/com/cburch/LogisimFX/resources/localization/file.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/file.properties
@@ -82,3 +82,6 @@ attrValueInvalidError = attribute value (%s) is not valid for %s
 xmlFormatError = XML formatting error: %s
 toolNameMissing = Tool name not provided
 toolNotFound = Tool not found in library
+
+statsTotalWithout = TOTAL (without project's subcircuits)
+statsTotalWith = TOTAL (with subcircuits)
