--- a/src/com/cburch/LogisimFX/resources/localization/file_de.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/file_de.properties
@@ -79,3 +79,6 @@ wireEndInvalidError= Ende der Leitung hat falsches Format
 attrNameMissingError= Name des Attributs fehlt
 attrValueInvalidError= Wert des Attributs (%s) ist ung\u00fc\u00f6tig f\u00fcr %s
 xmlFormatError= Fehler beim XML-Format: %s
+
+statsTotalWithout= GESAMT (ohne Teilschaltungen)
+statsTotalWith= GESAMT (mit Teilschaltungen)
