--- a/src/com/cburch/LogisimFX/resources/localization/file_pt.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/file_pt.properties
@@ -80,3 +80,6 @@ wireEndInvalidError= final da conexão mal formatado
 attrNameMissingError= falta nome do atributo
 attrValueInvalidError= valor do atributo (%s) inválido para %s
 xmlFormatError= Erro de formatação XML: %s
+
+statsTotalWithout= TOTAL (sem subcircuitos do projeto)
+statsTotalWith= TOTAL (com subcircuitos)
