--- a/src/com/cburch/LogisimFX/resources/localization/file_el.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/file_el.properties
@@ -80,3 +80,6 @@ wireEndInvalidError= \u03b4\u03af\u03c7\u03c9\u03c2 \u03bc\u03bf\u03c1\u03c6\u03
 attrNameMissingError= \u03bb\u03b5\u03af\u03c0\u03b5\u03b9 \u03c4\u03bf \u03cc\u03bd\u03bf\u03bc\u03b1 \u03c4\u03b7\u03c2 \u03b9\u03b4\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
 attrValueInvalidError= \u03b7 \u03c4\u03b9\u03bc\u03ae \u03c4\u03b7\u03c2 \u03b9\u03b4\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2 (%s) \u03b4\u03b5\u03bd \u03b5\u03af\u03bd\u03b1\u03b9 \u03ad\u03b3\u03ba\u03c5\u03c1\u03b7 \u03b3\u03b9\u03b1 %s
 xmlFormatError= \u03a3\u03c6\u03ac\u03bb\u03bc\u03b1 \u03bc\u03bf\u03c1\u03c6\u03ae\u03c2 XML: %s
+
+statsTotalWithout= \u03a3\u03a5\u039d\u039f\u039b\u039f (\u03b4\u03af\u03c7\u03c9\u03c2 \u03c4\u03b1 \u03c5\u03c0\u03bf-\u03ba\u03c5\u03ba\u03bb\u03ce\u03bc\u03b1\u03c4\u03b1 \u03c4\u03bf\u03c5 \u03ad\u03c1\u03b3\u03bf\u03c5)
+statsTotalWith= \u03a3\u03a5\u039d\u039f\u039b\u039f (\u03bc\u03b5 \u03c5\u03c0\u03bf-\u03ba\u03c5\u03ba\u03bb\u03ce\u03bc\u03b1\u03c4\u03b1)
