--- a/src/com/cburch/LogisimFX/resources/localization/opts.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/opts.properties
@@ -25,7 +25,7 @@ simulateRandomness = Add noise to component delays
 mouseTitle = Mouse
 mouseHelp = Edit tools associated with mouse buttons.
 mouseMapNone = No Tool Selected
-mouseMapText = Click Using Combination
+mouseMapText = Click Using Combination\nTo Map %s
 mouseMapText2 = To Map %s
 mouseRemoveButton = Remove
 #
