--- a/src/com/cburch/LogisimFX/resources/localization/opts_de.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/opts_de.properties
@@ -25,7 +25,7 @@ simulateRandomness= Bauteileverz\u00f6gerungen mit Rauschen versehen
 mouseTitle= Maus
 mouseHelp= Werkzeuge den Maustasten zuordnen.
 mouseMapNone= Kein Werkzeug ausgew\u00e4hlt
-mouseMapText= Maustastenbelegung
+mouseMapText= Maustastenbelegung\nf\u00fcr %s
 mouseMapText2= f\u00fcr %s
 mouseRemoveButton= Entfernen
 #
