--- a/src/com/cburch/LogisimFX/resources/localization/opts_es.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/opts_es.properties
@@ -34,7 +34,7 @@ simulateRandomness = Añadir Ruido A Los Retardos De Los Componentes
 mouseTitle = Ratón
 mouseHelp = Editar las herramientas asociadas con los botones del ratón.
 mouseMapNone = No Hay Herramientas Seleccionadas
-mouseMapText = Haz Click Aquí Con El Botón Adecuado
+mouseMapText = Haz Click Aquí Con El Botón Adecuado\nPara Asociarle %s
 mouseMapText2 = Para Asociarle %s
 mouseRemoveButton = Eliminar
 #
