--- a/src/com/cburch/LogisimFX/resources/localization/opts_pt.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/opts_pt.properties
@@ -25,7 +25,7 @@ simulateRandomness= Acrescentar ruído aos atrasos de componente
 mouseTitle= Mouse
 mouseHelp= Editar ferramentas associadas aos botões do mouse.
 mouseMapNone= Nenhuma ferramenta selecionada
-mouseMapText= Clicar usando combinação
+mouseMapText= Clicar usando combinação\nMapear %s
 mouseMapText2= Mapear %s
 mouseRemoveButton= Remover
 #
