--- a/src/com/cburch/LogisimFX/resources/localization/opts_el.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/opts_el.properties
@@ -25,7 +25,7 @@ simulateRandomness= \u03a0\u03c1\u03bf\u03c3\u03b8\u03ae\u03ba\u03b7 \u03b8\u03b
 mouseTitle= \u03a0\u03bf\u03bd\u03c4\u03af\u03ba\u03b9
 mouseHelp= \u0395\u03c1\u03b3\u03b1\u03bb\u03b5\u03af\u03b1 \u03b5\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1 \u03c0\u03bf\u03c5 \u03c3\u03c7\u03b5\u03c4\u03af\u03b6\u03bf\u03bd\u03c4\u03b1\u03b9 \u03bc\u03b5 \u03c4\u03b1 \u03c0\u03bb\u03ae\u03ba\u03c4\u03c1\u03b1 \u03c4\u03bf\u03c5 \u03c0\u03bf\u03bd\u03c4\u03b9\u03ba\u03b9\u03bf\u03cd.
 mouseMapNone= \u039a\u03b1\u03bd\u03ad\u03bd\u03b1 \u0395\u03c0\u03b9\u03bb\u03b5\u03b3\u03bc\u03ad\u03bd\u03bf \u0395\u03c1\u03b3\u03b1\u03bb\u03b5\u03af\u03bf
-mouseMapText= \u039a\u03bb\u03b9\u03ba \u03bc\u03b5 \u03c4\u03b7 \u03a7\u03c1\u03ae\u03c3\u03b7 \u03a3\u03c5\u03bd\u03b4\u03c5\u03b1\u03c3\u03bc\u03bf\u03cd
+mouseMapText= \u039a\u03bb\u03b9\u03ba \u03bc\u03b5 \u03c4\u03b7 \u03a7\u03c1\u03ae\u03c3\u03b7 \u03a3\u03c5\u03bd\u03b4\u03c5\u03b1\u03c3\u03bc\u03bf\u03cd\n\u03a3\u03c4\u03bf \u03a7\u03ac\u03c1\u03c4\u03b7 %s
 mouseMapText2= \u03a3\u03c4\u03bf \u03a7\u03ac\u03c1\u03c4\u03b7 %s
 mouseRemoveButton= \u039a\u03b1\u03c4\u03ac\u03c1\u03b3\u03b7\u03c3\u03b7
 #
