--- a/src/com/cburch/LogisimFX/resources/localization/start.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/start.properties
@@ -47,6 +47,7 @@ progressFileLoad = Loading file...
 progressProjectCreate = Creating project...
 progressFrameCreate = Creating window...
 creditsRoleLead = Lead Developer
+creditsRoleProgrammer = Programmer
 creditsRoleGerman = German Translation
 creditsRoleGreek = Greek Translation
 creditsRolePortuguese = Portuguese Translation
