--- a/src/com/cburch/LogisimFX/resources/localization/start_de.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/start_de.properties
@@ -47,6 +47,7 @@ progressFileLoad= Lade Datei...
 progressProjectCreate= Erzeuge Projekt...
 progressFrameCreate= Erzeuge Fenster...
 creditsRoleLead= Hauptentwickler
+creditsRoleProgrammer = Programmierer
 creditsRoleRussian= Russische \u00dcbersetzung
 creditsRoleGerman= Deutsche \u00dcbersetzung
 creditsRoleTesting= Erprobung
