--- a/src/com/cburch/LogisimFX/resources/localization/start_pt.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/start_pt.properties
@@ -47,6 +47,7 @@ progressFileLoad= Carregar arquivo...
 progressProjectCreate= Criar projeto...
 progressFrameCreate= Criar janela...
 creditsRoleLead= Desenvolvedor principal
+creditsRoleProgrammer = Programador
 creditsRoleGerman= Tradução para o alemão
 creditsRoleGreek = Tradução para o grego
 creditsRolePortuguese= Tradução para o português
