--- a/src/com/cburch/LogisimFX/resources/localization/start_el.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/start_el.properties
@@ -47,6 +47,7 @@ progressFileLoad= \u03a6\u03cc\u03c1\u03c4\u03c9\u03bc\u03b1 \u03b1\u03c1\u03c7\
 progressProjectCreate= \u0394\u03b7\u03bc\u03b9\u03bf\u03c5\u03c1\u03b3\u03af\u03b1 \u03ad\u03c1\u03b3\u03bf\u03c5...
 progressFrameCreate= \u0394\u03b7\u03bc\u03b9\u03bf\u03c5\u03c1\u03b3\u03af\u03b1 \u03c0\u03b1\u03c1\u03b1\u03b8\u03cd\u03c1\u03bf\u03c5...
 creditsRoleLead= \u03a5\u03c0\u03b5\u03cd\u03b8\u03c5\u03bd\u03bf\u03c2 \u0391\u03bd\u03ac\u03c0\u03c4\u03c5\u03be\u03b7\u03c2
+creditsRoleProgrammer = \u03a0\u03c1\u03bf\u03b3\u03c1\u03b1\u03bc\u03bc\u03b1\u03c4\u03b9\u03c3\u03c4\u03ae\u03c2
 creditsRoleGerman= \u0393\u03b5\u03c1\u03bc\u03b1\u03bd\u03b9\u03ba\u03ae \u039c\u03b5\u03c4\u03ac\u03c6\u03c1\u03b1\u03c3\u03b7
 creditsRolePortuguese= \u03a0\u03bf\u03c1\u03c4\u03bf\u03b3\u03b1\u03bb\u03b9\u03ba\u03ae \u039c\u03b5\u03c4\u03ac\u03c6\u03c1\u03b1\u03c3\u03b7
 creditsRoleRussian= \u03a1\u03c9\u03c3\u03b9\u03ba\u03ae \u039c\u03b5\u03c4\u03ac\u03c6\u03c1\u03b1\u03c3\u03b7
