--- a/src/com/cburch/LogisimFX/resources/localization/hex.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/hex.properties
@@ -11,6 +11,7 @@ hexOpenErrorTitle = Open Error
 hexSaveErrorTitle = Save Error
 openButton = Open...
 saveButton = Save...
+scrollTo = Go to
 closeButton = Close Window
 #
 # HexFile.java
