--- a/src/com/cburch/LogisimFX/resources/localization/hex_ru.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/hex_ru.properties
@@ -12,6 +12,7 @@ hexSaveErrorTitle= \u041e\u0448\u0438\u0431\u043a\u0430 \u0441\u043e\u0445\u0440
 openButton= \u041e\u0442\u043a\u0440\u044b\u0442\u044c...
 saveButton= \u0421\u043e\u0445\u0440\u0430\u043d\u0438\u0442\u044c...
 closeButton= \u0417\u0430\u043a\u0440\u044b\u0442\u044c \u043e\u043a\u043d\u043e
+scrollTo= \u041F\u0435\u0440\u0435\u0439\u0442\u0438 \u043A
 #
 # HexFile.java
 #
