--- a/src/com/cburch/LogisimFX/resources/localization/gui.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/gui.properties
@@ -140,3 +140,6 @@ toolAttrTitle = Tool: %s
 selectionOne = Selection: %s
 selectionMultiple = Selection: %s \u00D7 %s
 selectionVarious = Selection: Various items \u00D7 %s
+
+fontSelectorTitle = Font Selector
+fontSelectorHeader = Select Font
