--- a/src/com/cburch/LogisimFX/resources/localization/draw.properties
+++ b/src/com/cburch/LogisimFX/resources/localization/draw.properties
@@ -39,3 +39,5 @@ actionEditText = Edit Text
 selectionOne = Selection: %s
 selectionMultiple = Selection: %s \u00D7 %s
 selectionVarious = Selection: Various items \u00D7 %s
+
+selectTool = Select Tool
