--- a/src/LogisimFX/resources/localization/log.properties
+++ b/src/LogisimFX/resources/localization/log.properties
@@ -21,6 +21,7 @@ timeSelectionClock = Choose your clock:
 timeSelectionEnable = Enable time selection
 timeSelectionFrequency = Frequency:
 startLogging=Start Logging
+timelineTab=Timeline
 #
 # TablePanel.java
 #
@@ -46,3 +47,5 @@ fileExistsMessage = The file "%s" already exists.
 fileOverwriteOption = Overwrite
 fileAppendOption = Append
 fileCancelOption = Cancel
+openButton = Open...
+saveButton = Save...
