--- a/src/LogisimFX/resources/localization/log_de.properties
+++ b/src/LogisimFX/resources/localization/log_de.properties
@@ -42,3 +42,5 @@ fileExistsMessage= Die Datei "%s" existiert bereits.
 fileOverwriteOption= \u00dcberschreiben
 fileAppendOption= Anf\u00fcgen
 fileCancelOption= Abbrechen
+openButton= \u00d6ffnen...
+saveButton= Speichern...
