--- a/src/LogisimFX/resources/localization/log_es.properties
+++ b/src/LogisimFX/resources/localization/log_es.properties
@@ -9,9 +9,9 @@ closeButton = Cerrar Ventana
 #
 # Review selectionChangeBase
 #
-selectionTab = Selección
+selectionTab = Selecciï¿½n
 selectionHelp = Seleccionar que valores de los componentes son registrados.
-selectionAdd = Añadir >>
+selectionAdd = Aï¿½adir >>
 selectionChangeBase = Cambiar Base
 selectionMoveUp = Mover Arriba
 selectionMoveDown = Mover Abajo
@@ -24,7 +24,7 @@ timeSelectionFrequency = Frecuencia:
 #
 tableTab = Tabla
 tableHelp = Ver valores registrados recientemente.
-tableEmptyMessage = La selección está vacía.
+tableEmptyMessage = La selecciï¿½n estï¿½ vacï¿½a.
 #
 # FilePanel.java
 #
@@ -36,11 +36,13 @@ fileEnableButton = Habilitar
 fileDisableButton = Deshabilitar
 fileLabel = Archivo:
 fileSelectButton = Seleccionar...
-fileHeaderCheck = Incluir Línea De Cabecera
+fileHeaderCheck = Incluir Lï¿½nea De Cabecera
 fileCannotWriteTitle = Archivo No Disponible
 fileCannotWriteMessage = No tiene permiso para escribir en "%s."
 fileExistsTitle = Archivo Ya Existente
 fileExistsMessage = El archivo "%s" ya existe.
 fileOverwriteOption = Sobreescribir
-fileAppendOption = Añadir
+fileAppendOption = Aï¿½adir
 fileCancelOption = Cancelar
+openButton = Abrir...
+saveButton = Salvar...
