--- a/src/LogisimFX/resources/localization/log_pt.properties
+++ b/src/LogisimFX/resources/localization/log_pt.properties
@@ -7,10 +7,10 @@ closeButton= Fechar janela
 #
 # SelectionPanel.java
 #
-selectionTab= Seleção
-selectionHelp= Selecionar quais valores de componentes deverão ser registrados.
+selectionTab= Seleï¿½ï¿½o
+selectionHelp= Selecionar quais valores de componentes deverï¿½o ser registrados.
 selectionAdd= Acrescentar >>
-selectionChangeBase= Mudar base do sistema de numeração
+selectionChangeBase= Mudar base do sistema de numeraï¿½ï¿½o
 selectionMoveUp= Para cima
 selectionMoveDown= Para baixo
 selectionRemove= << Remover
@@ -22,23 +22,25 @@ timeSelectionFrequency = Frequ?ncia:
 #
 tableTab= Tabela
 tableHelp= Ver registro de valores recentes.
-tableEmptyMessage= Seleção vazia.
+tableEmptyMessage= Seleï¿½ï¿½o vazia.
 #
 # FilePanel.java
 #
 fileTab= Arquivo
-fileHelp= Configurar saída em arquivo.
-fileEnabled= Saída em arquivo habilitada.
-fileDisabled= Saída em arquivo desabilitada.
+fileHelp= Configurar saï¿½da em arquivo.
+fileEnabled= Saï¿½da em arquivo habilitada.
+fileDisabled= Saï¿½da em arquivo desabilitada.
 fileEnableButton= Habilitar
 fileDisableButton= Desabilitar
 fileLabel= Arquivo:
 fileSelectButton= Selecionar...
-fileHeaderCheck= Incluir linha de cabeçalho
-fileCannotWriteTitle= Arquivo indisponível
-fileCannotWriteMessage= Não há permissão para se escrever em "%s."
-fileExistsTitle= Arquivo já existente
-fileExistsMessage= Arquivo "%s" já existente.
+fileHeaderCheck= Incluir linha de cabeï¿½alho
+fileCannotWriteTitle= Arquivo indisponï¿½vel
+fileCannotWriteMessage= Nï¿½o hï¿½ permissï¿½o para se escrever em "%s."
+fileExistsTitle= Arquivo jï¿½ existente
+fileExistsMessage= Arquivo "%s" jï¿½ existente.
 fileOverwriteOption= Sobrescrever
 fileAppendOption= Acrescentar
 fileCancelOption= Cancelar
+openButton= Abrir...
+saveButton= Salvar...
