--- a/src/LogisimFX/resources/localization/log_el.properties
+++ b/src/LogisimFX/resources/localization/log_el.properties
@@ -39,3 +39,5 @@ fileExistsMessage= \u03a4\u03bf \u03b1\u03c1\u03c7\u03b5\u03af\u03bf "%s" \u03c5
 fileOverwriteOption= \u0391\u03bd\u03c4\u03b9\u03ba\u03b1\u03c4\u03ac\u03c3\u03c4\u03b1\u03c3\u03b7
 fileAppendOption= \u03a0\u03c1\u03bf\u03c3\u03ac\u03c1\u03c4\u03b7\u03c3\u03b7
 fileCancelOption= \u0391\u03ba\u03cd\u03c1\u03c9\u03c3\u03b7
+openButton= \u0386\u03bd\u03bf\u03b9\u03b3\u03bc\u03b1...
+saveButton= \u0391\u03c0\u03bf\u03b8\u03ae\u03ba\u03b5\u03c5\u03c3\u03b7...
