--- a/src/LogisimFX/resources/localization/log_ru.properties
+++ b/src/LogisimFX/resources/localization/log_ru.properties
@@ -42,3 +42,5 @@ fileExistsMessage= \u0424\u0430\u0439\u043b "%s" \u0443\u0436\u0435 \u0441\u0443
 fileOverwriteOption= \u041f\u0435\u0440\u0435\u0437\u0430\u043f\u0438\u0441\u0430\u0442\u044c
 fileAppendOption= \u0414\u043e\u043f\u043e\u043b\u043d\u0438\u0442\u044c
 fileCancelOption= \u041e\u0442\u043c\u0435\u043d\u0430
+openButton= \u041e\u0442\u043a\u0440\u044b\u0442\u044c...
+saveButton= \u0421\u043e\u0445\u0440\u0430\u043d\u0438\u0442\u044c...
