--- a/src/LogisimFX/resources/localization/log.properties
+++ b/src/LogisimFX/resources/localization/log.properties
@@ -49,3 +49,7 @@ fileAppendOption = Append
 fileCancelOption = Cancel
 openButton = Open...
 saveButton = Save...
+
+exportImage = Export Image
+componentTitle= Component
+valueTitle = Value
