--- a/src/LogisimFX/resources/localization/log_de.properties
+++ b/src/LogisimFX/resources/localization/log_de.properties
@@ -44,3 +44,5 @@ fileAppendOption= Anf\u00fcgen
 fileCancelOption= Abbrechen
 openButton= \u00d6ffnen...
 saveButton= Speichern...
+
+exportImage= Bild exportieren
