--- a/src/LogisimFX/resources/localization/log_pt.properties
+++ b/src/LogisimFX/resources/localization/log_pt.properties
@@ -44,3 +44,5 @@ fileAppendOption= Acrescentar
 fileCancelOption= Cancelar
 openButton= Abrir...
 saveButton= Salvar...
+
+exportImage= Exportar imagem
