--- a/src/LogisimFX/resources/localization/log_el.properties
+++ b/src/LogisimFX/resources/localization/log_el.properties
@@ -41,3 +41,5 @@ fileAppendOption= \u03a0\u03c1\u03bf\u03c3\u03ac\u03c1\u03c4\u03b7\u03c3\u03b7
 fileCancelOption= \u0391\u03ba\u03cd\u03c1\u03c9\u03c3\u03b7
 openButton= \u0386\u03bd\u03bf\u03b9\u03b3\u03bc\u03b1...
 saveButton= \u0391\u03c0\u03bf\u03b8\u03ae\u03ba\u03b5\u03c5\u03c3\u03b7...
+
+exportImage= \u0395\u03be\u03b1\u03b3\u03c9\u03b3\u03ae \u0395\u03b9\u03ba\u03cc\u03bd\u03b1\u03c2
