--- a/src/LogisimFX/resources/localization/print.properties
+++ b/src/LogisimFX/resources/localization/print.properties
@@ -9,3 +9,4 @@ printEmptyCircuitsMessage = No non-empty circuits are available for printing.
 printParmsTitle = Print Parameters
 printError = Error during printing: %s
 printErrorTitle = Error During Print
+labelPrinterView = Printer View:
