--- a/src/LogisimFX/resources/localization/print_de.properties
+++ b/src/LogisimFX/resources/localization/print_de.properties
@@ -9,3 +9,4 @@ printEmptyCircuitsMessage= Keine nicht-leeren Schaltungen zum Drucken vorhanden.
 printParmsTitle= Druckparameter
 printError= Fehler beim Drucken: %s
 printErrorTitle= Fehler beim Drucken
+labelPrinterView= Druckeransicht:
