--- a/src/LogisimFX/resources/localization/print_es.properties
+++ b/src/LogisimFX/resources/localization/print_es.properties
@@ -6,6 +6,7 @@ labelRotateToFit = Rotar Hasta Encajar:
 labelHeader = Cabecera:
 printEmptyCircuitsTitle = No Se Puede Imprimir
 printEmptyCircuitsMessage = No hay circuitos disponibles para imprimir.
-printParmsTitle = Imprimir Parámetros
+printParmsTitle = Imprimir Parï¿½metros
 printError = Error al imprimir: %s
 printErrorTitle = Error Al Imprimir
+labelPrinterView = Vista De La Impresora:
