--- a/src/LogisimFX/resources/localization/print_pt.properties
+++ b/src/LogisimFX/resources/localization/print_pt.properties
@@ -3,9 +3,10 @@
 #
 labelCircuits= Circuitos:
 labelRotateToFit= Rotacionar para ajuste:
-labelHeader= Cabeçalho:
-printEmptyCircuitsTitle= Impossível imprimir
-printEmptyCircuitsMessage= Circuitos não vazios disponíveis para se imprimir.
-printParmsTitle= Imprimir parâmetros
-printError= Erro durante a impressão de: %s
-printErrorTitle= Erro durante a impressão
+labelHeader= Cabeï¿½alho:
+printEmptyCircuitsTitle= Impossï¿½vel imprimir
+printEmptyCircuitsMessage= Circuitos nï¿½o vazios disponï¿½veis para se imprimir.
+printParmsTitle= Imprimir parï¿½metros
+printError= Erro durante a impressï¿½o de: %s
+printErrorTitle= Erro durante a impressï¿½o
+labelPrinterView= Prï¿½via da impressï¿½o:
