--- a/src/LogisimFX/resources/localization/print_el.properties
+++ b/src/LogisimFX/resources/localization/print_el.properties
@@ -9,3 +9,4 @@ printEmptyCircuitsMessage= \u039a\u03b1\u03bd\u03ad\u03bd\u03b1 \u03bc\u03b7-\u0
 printParmsTitle= \u03a0\u03b1\u03c1\u03ac\u03bc\u03b5\u03c4\u03c1\u03bf\u03b9 \u0395\u03ba\u03c4\u03cd\u03c0\u03c9\u03c3\u03b7\u03c2
 printError= \u03a3\u03c6\u03ac\u03bb\u03bc\u03b1 \u03ba\u03b1\u03c4\u03ac \u03c4\u03b7\u03bd \u03b5\u03ba\u03c4\u03cd\u03c0\u03c9\u03c3\u03b7: %s
 printErrorTitle= \u03a3\u03c6\u03ac\u03bb\u03bc\u03b1 \u039a\u03b1\u03c4\u03ac \u03c4\u03b7\u03bd \u0395\u03ba\u03c4\u03cd\u03c0\u03c9\u03c3\u03b7
+labelPrinterView= \u03a0\u03c1\u03bf\u03b2\u03bf\u03bb\u03ae \u0395\u03ba\u03c4\u03c5\u03c0\u03c9\u03c4\u03ae:
