--- a/src/LogisimFX/resources/localization/std.properties
+++ b/src/LogisimFX/resources/localization/std.properties
@@ -443,3 +443,16 @@ ttyClearTip = Clear: 1 clears screen
 ttyClockTip = Clock: trigger adds character on input
 ttyEnableTip = Write enable: 0 disables clock
 ttyInputTip = Data: ASCII value of next character to write
+
+verifierLibrary = Verifiers
+verifier = Verifier
+
+stdAccessModeAttr = Access mode
+stdEditingMode = Editing mode
+stdProtectionMode = Protection mode
+
+stdSequenceWidthAttr = Sequence bit depth
+
+verifierInputTip = Verifier Input
+verifierOutput0Tip = Sequence output
+verifierOutput1Tip = Ready output: the verifier has finished its work
