Multiple bug fix

--- a/src/LogisimFX/resources/localization/analyze.properties
+++ b/src/LogisimFX/resources/localization/analyze.properties
@@ -87,6 +87,7 @@ oscillateError = Circuit oscillates.
 #
 implicitAndOperator = (Implicit AND)
 invalidCharacterError = Unrecognized characters: %s
+invalidConstantDefine = Invalid input: multiple constant defined
 missingLeftOperandError = Operator %s missing left operand.
 missingRightOperandError = Operator %s missing right operand.
 lparenMissingError = No matching opening parenthesis.
