--- a/src/LogisimFX/resources/localization/log.properties
+++ b/src/LogisimFX/resources/localization/log.properties
@@ -22,6 +22,14 @@ timeSelectionEnable = Enable time selection
 timeSelectionFrequency = Frequency:
 startLogging=Start Logging
 timelineTab=Timeline
+timelineClear = Clear timeline
+simulateResetItem = Reset Simulation
+simulateEnableStepsTip = Enable signals propagating through circuits
+simulateDisableStepsTip = Disable signals propagating through circuits
+simulateStepTip = Step signal propagating through circuit once
+simulateEnableTicksTip = Enable clock ticks
+simulateDisableTicksTip = Disable clock ticks
+simulateTickTip = Tick clocks once
 #
 # TablePanel.java
 #
