--- a/src/LogisimFX/resources/localization/log_de.properties
+++ b/src/LogisimFX/resources/localization/log_de.properties
@@ -17,6 +17,7 @@ selectionRemove= <<Entfernen
 timeSelectionClock = W?hlen Sie Ihre Uhr:
 timeSelectionEnable = Zeitauswahl aktivieren
 timeSelectionFrequency = Frequenz:
+simulateResetItem= Simulation zur\u00fccksetzen
 #
 # TablePanel.java
 #
