--- a/src/LogisimFX/resources/localization/menu.properties
+++ b/src/LogisimFX/resources/localization/menu.properties
@@ -61,6 +61,10 @@ simulateStepItem = Step Simulation
 simulateTickOnceItem = Tick Once
 simulateTickItem = Ticks Enabled
 simulateTickFreqMenu = Tick Frequency
+simulateTickTip = Tick clocks once
+simulateNTicsTip = Run N ticks
+simulateInputTicksCountHeader = Define ticks count
+simulateInputTicksCountBody = Input ticks count
 simulateTickFreqItem = %s Hz
 simulateTickKFreqItem = %s KHz
 KHZ41 = 4.1 KHz
