--- a/src/LogisimFX/resources/localization/log_el.properties
+++ b/src/LogisimFX/resources/localization/log_el.properties
@@ -20,6 +20,7 @@ selectionRemove= << \u039a\u03b1\u03c4\u03ac\u03c1\u03b3\u03b7\u03c3\u03b7
 tableTab= \u03a0\u03af\u03bd\u03b1\u03ba\u03b1\u03c2
 tableHelp= \u03a0\u03c1\u03bf\u03b2\u03bf\u03bb\u03ae \u03b7\u03bc\u03b5\u03c1\u03bf\u03bb\u03bf\u03b3\u03af\u03bf\u03c5 \u03c4\u03c9\u03bd \u03c0\u03c1\u03cc\u03c3\u03c6\u03b1\u03c4\u03c9\u03bd \u03c4\u03b9\u03bc\u03ce\u03bd.
 tableEmptyMessage= \u0397 \u03b5\u03c0\u03b9\u03bb\u03bf\u03b3\u03ae \u03b5\u03af\u03bd\u03b1\u03b9 \u03ba\u03b5\u03bd\u03ae.
+simulateResetItem= \u0391\u03c1\u03c7\u03b9\u03ba\u03bf\u03c0\u03bf\u03af\u03b7\u03c3\u03b7 \u03a0\u03c1\u03bf\u03c3\u03bf\u03bc\u03bf\u03af\u03c9\u03c3\u03b7\u03c2
 #
 # FilePanel.java
 #
