--- a/src/LogisimFX/resources/localization/menu_ru.properties
+++ b/src/LogisimFX/resources/localization/menu_ru.properties
@@ -58,6 +58,10 @@ simulateResetItem= \u0421\u0431\u0440\u043e\u0441\u0438\u0442\u044c \u043c\u043e
 simulateStepItem= \u0428\u0430\u0433 \u043c\u043e\u0434\u0435\u043b\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u044f
 simulateTickOnceItem= \u041e\u0434\u0438\u043d \u0442\u0430\u043a\u0442
 simulateTickItem= \u0422\u0430\u043a\u0442\u044b \u0432\u043a\u043b\u044e\u0447\u0435\u043d\u044b
+simulateNTicsTip = \u041F\u0440\u043E\u0433\u043D\u0430\u0442\u044C N \u0442\u0430\u043A\u0442\u043E\u0432
+simulateInputTicksCountHeader = \u041E\u043F\u0440\u0435\u0434\u0435\u043B\u0438\u043C \u0447\u0438\u0441\u043B\u043E \u0442\u0430\u043A\u0442\u043E\u0432
+simulateInputTicksCountBody =\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0447\u0438\u0441\u043B\u043E \u0442\u0430\u043A\u0442\u043E\u0432
+
 simulateTickFreqMenu= \u0422\u0430\u043a\u0442\u043e\u0432\u0430\u044f \u0447\u0430\u0441\u0442\u043e\u0442\u0430
 simulateTickFreqItem= %s \u0413\u0446
 simulateTickKFreqItem= %s \u043a\u0413\u0446
