Multiple bug fix

--- a/src/LogisimFX/resources/localization/draw.properties
+++ b/src/LogisimFX/resources/localization/draw.properties
@@ -15,6 +15,7 @@ alignEnd = Right
 # draw.model - CanvasObject names
 shapeMultiple = Objects
 shapeCurve = Curve
+shapeArc = Arc
 shapeRect = Rectangle
 shapeRoundRect = Rounded Rectangle
 shapeOval = Oval
