--- a/src/LogisimFX/resources/localization/draw_ru.properties
+++ b/src/LogisimFX/resources/localization/draw_ru.properties
@@ -15,6 +15,7 @@ alignEnd= \u0421\u043f\u0440\u0430\u0432\u0430
 # draw.model - CanvasObject names
 shapeMultiple= \u041e\u0431\u044a\u0435\u043a\u0442\u044b
 shapeCurve= \u041a\u0440\u0438\u0432\u0430\u044f
+shapeArc= \u0410\u0440\u043A\u0430
 shapeRect= \u041f\u0440\u044f\u043c\u043e\u0443\u0433\u043e\u043b\u044c\u043d\u0438\u043a
 shapeRoundRect= \u0421\u043a\u0440\u0443\u0433\u043b\u0451\u043d\u043d\u044b\u0439 \u043f\u0440\u044f\u043c\u043e\u0443\u0433\u043e\u043b\u044c\u043d\u0438\u043a
 shapeOval= \u041e\u0432\u0430\u043b
