--- a/src/LogisimFX/resources/localization/menu_ru.properties
+++ b/src/LogisimFX/resources/localization/menu_ru.properties
@@ -131,8 +131,8 @@ unloadNoneError= \u0412\u0441\u0435 \u043e\u0442\u043a\u0440\u044b\u0442\u044b\u
 
 # util/WindowMenu.java
 windowMenu= \u041e\u043a\u043d\u043e
-windowMinimizeItem= \u041c\u0438\u043d\u0438\u043c\u0438\u0437\u0438\u0440\u043e\u0432\u0430\u0442\u044c
-windowZoomItem= \u041c\u0430\u043a\u0441\u0438\u043c\u0438\u0437\u0438\u0440\u043e\u0432\u0430\u0442\u044c
+windowMinimizeItem= \u0421\u0432\u0435\u0440\u043D\u0443\u0442\u044C \u043E\u043A\u043D\u043E
+windowZoomItem= \u041D\u0430 \u043F\u043E\u043B\u043D\u044B\u0439 \u044D\u043A\u0440\u0430\u043D
 windowZoomItemMac= \u041c\u0430\u0441\u0448\u0442\u0430\u0431\u0438\u0440\u043e\u0432\u0430\u0442\u044c
 preferencesFrameMenuItem= \u041d\u0430\u0441\u0442\u0440\u043e\u0439\u043a\u0438
 analyzerWindowTitle= \u041a\u043e\u043c\u0431\u0438\u043d\u0430\u0446\u0438\u043e\u043d\u043d\u044b\u0439 \u0430\u043d\u0430\u043b\u0438\u0437
