Diagonal wires, animated gif export, circlog bugfix

--- a/src/LogisimFX/resources/localization/circuit.properties
+++ b/src/LogisimFX/resources/localization/circuit.properties
@@ -63,9 +63,11 @@ splitterTunnelViewAttr = Tunnel view
 #
 wireComponent = Wire
 wireLengthAttr = Length
+wireRotationAttr = Rotation
 wireDirectionAttr = Direction
 wireDirectionHorzOption = Horizontal
 wireDirectionVertOption = Vertical
+wireDirectionDiagOption = Diagonal
 
 # circuit/appear/AppearanceOrigin
 circuitAnchor = Anchor
