--- a/src/LogisimFX/resources/localization/imgexport.properties
+++ b/src/LogisimFX/resources/localization/imgexport.properties
@@ -21,3 +21,5 @@ couldNotCreateFile = The file could not be created.
 confirmOverwriteMessage = The file already exists. Do you want to overwrite it?
 confirmOverwriteTitle = Confirm Overwrite
 exportImageProgress = Computing Image...
+exportProgressTitle = Exporting image...
+exportFileHeader = Exporting %s, please wait
