--- a/src/LogisimFX/resources/localization/log.properties
+++ b/src/LogisimFX/resources/localization/log.properties
@@ -61,3 +61,5 @@ saveButton = Save...
 exportImage = Export Image
 componentTitle= Component
 valueTitle = Value
+
+exportProgressHeader = Exporting %s of %s tiles
