integrating docklib-fx

--- a/src/LogisimFX/resources/localization/gui.properties
+++ b/src/LogisimFX/resources/localization/gui.properties
@@ -143,3 +143,12 @@ selectionVarious = Selection: Various items \u00D7 %s
 
 fontSelectorTitle = Font Selector
 fontSelectorHeader = Select Font
+
+simTab = Simulation
+toolsTab = Tools
+attrTab = Attributes
+
+titleLayoutEditor = LogisimFX layout: %s of %s
+titleAppearanceEditor = LogisimFX appearance: %s of %s
+titleVhdlCodeEditor = LogisimFX vhdl model: %s of %s
+titleVerilogCodeEditor = LogisimFX verilog model: %s of %s
