--- a/src/LogisimFX/resources/localization/gui_ru.properties
+++ b/src/LogisimFX/resources/localization/gui_ru.properties
@@ -143,3 +143,12 @@ selectionVarious= \u0412\u044b\u0434\u0435\u043b\u0435\u043d\u0438\u0435: \u0420
 
 fontSelectorTitle = \u0412\u044B\u0431\u043E\u0440 \u0448\u0440\u0438\u0444\u0442\u0430
 fontSelectorHeader = \u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u0448\u0440\u0438\u0444\u0442
+
+simTab = Симуляция
+toolsTab = Инструменты
+attrTab = Свойства
+
+titleLayoutEditor = LogisimFX схема: %s из %s
+titleAppearanceEditor = LogisimFX внешний вид: %s из %s
+titleVhdlCodeEditor = LogisimFX vhdl модель: %s из %s
+titleVerilogCodeEditor = LogisimFX verilog модель: %s из %s
