--- a/src/LogisimFX/resources/localization/menu.properties
+++ b/src/LogisimFX/resources/localization/menu.properties
@@ -139,3 +139,11 @@ analyzerWindowTitle = Combinational Analysis
 preferencesFrameMenuItem = Preferences
 windowZoomItemMac = Zoom
 windowCloseItem = Close
+
+
+windowToolsWindow = Tools Tabs
+
+windowSimTab = Simulation
+windowToolsTab = Tools
+windowAttrTab = Attributes
+windowTimelineTab = TimeLine
