--- a/src/LogisimFX/resources/localization/menu_ru.properties
+++ b/src/LogisimFX/resources/localization/menu_ru.properties
@@ -82,7 +82,7 @@ HZ05 = 0.5 \u0413\u0446
 HZ025 = 0.25 \u0413\u0446
 simulateUpStateMenu= \u0421\u043e\u0441\u0442\u043e\u044f\u043d\u0438\u0435 \u0443\u0440\u043e\u0432\u043d\u0435\u043c \u0432\u044b\u0448\u0435
 simulateDownStateMenu= \u0421\u043e\u0441\u0442\u043e\u044f\u043d\u0438\u0435 \u0443\u0440\u043e\u0432\u043d\u0435\u043c \u043d\u0438\u0436\u0435
-simulateLogItem= \u0417\u0430\u043f\u0438\u0441\u044c \u0432 \u0436\u0443\u0440\u043d\u0430\u043b...
+simulateLogItem= Волновая диаграмма...
 
 # MenuHelp.java
 helpMenu= \u0421\u043f\u0440\u0430\u0432\u043a\u0430
@@ -137,3 +137,10 @@ windowZoomItemMac= \u041c\u0430\u0441\u0448\u0442\u0430\u0431\u0438\u0440\u043e\
 preferencesFrameMenuItem= \u041d\u0430\u0441\u0442\u0440\u043e\u0439\u043a\u0438
 analyzerWindowTitle= \u041a\u043e\u043c\u0431\u0438\u043d\u0430\u0446\u0438\u043e\u043d\u043d\u044b\u0439 \u0430\u043d\u0430\u043b\u0438\u0437
 windowCloseItem= \u0417\u0430\u043a\u0440\u044b\u0442\u044c
+
+windowToolsWindow = Вкладки инструмнтов
+
+windowSimTab = Симуляция
+windowToolsTab = Инструменты
+windowAttrTab = Свойства
+windowTimelineTab = Временная диаграмма
