--- a/src/LogisimFX/resources/localization/gui.properties
+++ b/src/LogisimFX/resources/localization/gui.properties
@@ -147,8 +147,22 @@ fontSelectorHeader = Select Font
 simTab = Simulation
 toolsTab = Tools
 attrTab = Attributes
+waveformTab = Waveform
 
 titleLayoutEditor = LogisimFX layout: %s of %s
 titleAppearanceEditor = LogisimFX appearance: %s of %s
 titleVhdlCodeEditor = LogisimFX vhdl model: %s of %s
 titleVerilogCodeEditor = LogisimFX verilog model: %s of %s
+
+dockPinnedItem=Dock pinned
+floatItem=Float
+windowItem=Window
+closeItem=Close
+closeOthersItem=Close others
+closeAllItems=Close all
+closeToTheLeftItem=Close all to the left
+closeToTheRightItem=Close all to the right
+splitVerticallyItem=Split vertically
+splitHorizontallyItem=Split horizontally
+selectNextTabItem=Select next tab
+selectPreviousTabItem=Select previous tab
