--- a/src/LogisimFX/resources/localization/gui_ru.properties
+++ b/src/LogisimFX/resources/localization/gui_ru.properties
@@ -147,8 +147,22 @@ fontSelectorHeader = \u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u0448\u04
 simTab = Симуляция
 toolsTab = Инструменты
 attrTab = Свойства
+waveformTab = Временная диаграмма
 
 titleLayoutEditor = LogisimFX схема: %s из %s
 titleAppearanceEditor = LogisimFX внешний вид: %s из %s
 titleVhdlCodeEditor = LogisimFX vhdl модель: %s из %s
 titleVerilogCodeEditor = LogisimFX verilog модель: %s из %s
+
+dockPinnedItem=Закрепить вкладку
+floatItem=Открепить вкладку
+windowItem=В отдельное окно
+closeItem=Закрыть
+closeOthersItem=Закрыть другие вкладки
+closeAllItems=Закрыть все вкладки
+closeToTheLeftItem=Закрыть вкладки слева
+closeToTheRightItem=Закрыть вкладки справа
+splitVerticallyItem=Разделить по вертикали
+splitHorizontallyItem=Разделить по горизонтали
+selectNextTabItem=Перейти к следующей вкладке
+selectPreviousTabItem=Перейти к предыдущей вкладке
