--- a/src/LogisimFX/resources/localization/log.properties
+++ b/src/LogisimFX/resources/localization/log.properties
@@ -21,8 +21,9 @@ timeSelectionClock = Choose your clock:
 timeSelectionEnable = Enable time selection
 timeSelectionFrequency = Frequency:
 startLogging=Start Logging
-timelineTab=Timeline
-timelineClear = Clear timeline
+backToElemList=Change content
+waveformTab=Waveform
+waveformClear = Clear waveform
 simulateResetItem = Reset Simulation
 simulateEnableStepsTip = Enable signals propagating through circuits
 simulateDisableStepsTip = Disable signals propagating through circuits
