--- a/src/LogisimFX/resources/localization/menu.properties
+++ b/src/LogisimFX/resources/localization/menu.properties
@@ -31,6 +31,17 @@ filePrintItem = Print...
 filePreferencesItem = Preferences...
 fileQuitItem = Exit
 
+# MenuView
+viewMenu = View
+viewToolsWindow = Tools Tabs
+viewSimTab = Simulation
+viewToolsTab = Tools
+viewAttrTab = Attributes
+viewWaveformTab = Waveform
+viewChangeTheme = Change theme
+
+
+
 # MenuProject.java
 projectMenu = Project
 projectAddCircuitItem = Add Circuit...
@@ -139,11 +150,3 @@ analyzerWindowTitle = Combinational Analysis
 preferencesFrameMenuItem = Preferences
 windowZoomItemMac = Zoom
 windowCloseItem = Close
-
-
-windowToolsWindow = Tools Tabs
-
-windowSimTab = Simulation
-windowToolsTab = Tools
-windowAttrTab = Attributes
-windowTimelineTab = TimeLine
