--- a/src/LogisimFX/resources/localization/menu_ru.properties
+++ b/src/LogisimFX/resources/localization/menu_ru.properties
@@ -29,6 +29,15 @@ filePrintItem= \u041f\u0435\u0447\u0430\u0442\u044c...
 filePreferencesItem= \u041d\u0430\u0441\u0442\u0440\u043e\u0439\u043a\u0438...
 fileQuitItem= \u0412\u044b\u0445\u043e\u0434
 
+# MenuView
+viewMenu = Вид
+viewToolsWindow = Вкладки инструментов
+viewSimTab = Симуляция
+viewToolsTab = Инструменты
+viewAttrTab = Свойства
+viewWaveformTab = Временная диаграмма
+viewChangeTheme = Изменить тему
+
 # MenuProject.java
 projectMenu= \u041f\u0440\u043e\u0435\u043a\u0442
 projectAddCircuitItem= \u0414\u043e\u0431\u0430\u0432\u0438\u0442\u044c \u0441\u0445\u0435\u043c\u0443...
@@ -138,9 +147,3 @@ preferencesFrameMenuItem= \u041d\u0430\u0441\u0442\u0440\u043e\u0439\u043a\u0438
 analyzerWindowTitle= \u041a\u043e\u043c\u0431\u0438\u043d\u0430\u0446\u0438\u043e\u043d\u043d\u044b\u0439 \u0430\u043d\u0430\u043b\u0438\u0437
 windowCloseItem= \u0417\u0430\u043a\u0440\u044b\u0442\u044c
 
-windowToolsWindow = Вкладки инструмнтов
-
-windowSimTab = Симуляция
-windowToolsTab = Инструменты
-windowAttrTab = Свойства
-windowTimelineTab = Временная диаграмма
